Melhorias na MainPage
Foi feita a conclusão do carrousel e alterações aos cards da secção sobre nós

--- a/Projeto PWC/home.html
+++ b/Projeto PWC/home.html
@@ -55,30 +55,48 @@
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <!--Slides-->
         <div class="carousel-inner">
           <!-- 1º Slide -->
-          <div class="carousel-item active">
-            <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="1440" height="537" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: First slide" preserveAspectRatio="xMidYMid slice" focusable="false">
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#777"></rect>
-            </svg>
+          <div class="carousel-item background-slide1 active">
+            <div class="d-flex slide-carrousel">
+              <!--Leve duvida-->
+              <div class="col-1"></div>
+              <div class="d-flex ps-5 col-5 justify-content-center align-items-center">
+                <div class="ps-5">
+                  <h1 class="d-block tamanho-letra-titulo">Descobre o Japão</h1>
+                  <p class="d-block">Faz uma viagem pelos destinos mais deslumbrantes do mundo. Das ruas vibrantes de Nova Iorque às antigas ruínas de Roma, cada imagem revela um lugar à espera de ser explorado.</p>
+                  <p class="pb-3">Quer seja para aventura, relaxamento ou descoberta, encontra o teu próximo destino connosco.</p>
+                  <a class="nav-link active" href="#" aria-disabled="true"><button type="button" class="btn btn-outline-secondary rounded-0 px-4 py-2">Explorar</button></a>
+                </div>
+              </div>
+              <div class="d-flex col-5 justify-content-center align-items-center">
+                <img src="assets/img/PalacioJapao.png">
+              </div>
+              <!--Leve duvida-->
+              <div class="col-1"></div>
+            </div>
           </div>
           <!-- 2º Slide -->
-          <div class="carousel-item">
-            <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="1440" height="537" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Second slide" preserveAspectRatio="xMidYMid slice" focusable="false">
-              <title>Placeholder</title><rect width="100%" height="100%" fill="#666"></rect>
-            </svg>
-          </div>
-          <!-- 3º Slide -->
-          <div class="carousel-item">
-            <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="1440" height="537" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Third slide" preserveAspectRatio="xMidYMid slice" focusable="false">
-              <title>Placeholder</title>
-              <rect width="100%" height="100%" fill="#555"></rect>
-             
-            </svg>
+          <div class="carousel-item background-slide2 text-white active">
+            <div class="d-flex slide-carrousel">
+              <!--Leve duvida-->
+              <div class="col-1"></div>
+              <div class="d-flex ps-5 col-5 justify-content-center align-items-center">
+                <div class="ps-5">
+                  <h1 class="tamanho-letra-titulo">Descobre o Austrália</h1>
+                  <p>Descobre a vibrante Grande Barreira de Coral, a famosa Ópera de Sydney e o vasto Outback.</p>
+                  <p class="pb-3">A Austrália oferece uma vida selvagem única, costas ensolaradas e paisagens diversificadas.</p>
+                  <a class="nav-link active" href="#" aria-disabled="true"><button type="button" class="btn btn-outline-light rounded-0 px-4 py-2">Explorar</button></a>
+                </div>
+              </div>
+              <div class="d-flex col-5 justify-content-center align-items-center">
+                <img src="assets/img/OperaAustralia.png">
+              </div>
+              <!--Leve duvida-->
+              <div class="col-1"></div>
+            </div>
           </div>
         </div>
         <!--Controlo de navegação-->
@@ -150,10 +168,10 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
         <!--1º Cards-->                    
           <div class="col">
-            <div class="card h-100 rounded-0 card-shadow">
-              <img src="assets/img/CardsSobreNos1.png" class="card-img-top px-4 pt-4" alt="...">
-              <div class="card-body">
-                <h2 class="card-title text-center">Miguel</h2>
+            <div class="card h-100 rounded-0 card-shadow rounded-3">
+              <img src="assets/img/Paulo.jpg" class="card-img-top px-4 py-4 rounded-pill" alt="...">
+              <div class="card-body pt-0">
+                <h2 class="card-title text-center">Paulo</h2>
                 <p class="card-text text-center">Estudante</p>
                 <div class="d-flex justify-content-center">
                   <button type="button" class="btn btn-outline-primary rounded-0 fw-semibold ">Mais informações ></button>
@@ -163,10 +181,12 @@
           </div>
           <!--2º Cards-->
           <div class="col">
-            <div class="card h-100 rounded-0 card-shadow">
-              <img src="assets/img/CardsSobreNos1.png" class="card-img-top px-4 pt-4" alt="...">
-              <div class="card-body">
-                <h2 class="card-title text-center">Paulo</h2>
+            <div class="card h-100 rounded-0 card-shadow rounded-3">
+              <div class="h-75">
+                <img src="assets/img/Paulo.jpg" class="h-100 card-img-top px-4 py-4 rounded-pill" alt="...">
+              </div>
+              <div class="card-body pt-0">
+                <h2 class="card-title text-center">Miguel</h2>
                 <p class="card-text text-center">Estudante</p>
                 <div class="d-flex justify-content-center">
                   <button type="button" class="btn btn-outline-primary rounded-0 fw-semibold ">Mais informações ></button>
@@ -176,9 +196,9 @@
           </div>
           <!--3º Cards-->
           <div class="col">
-            <div class="card h-100 rounded-0 card-shadow">
-              <img src="assets/img/CardsSobreNos1.png" class="card-img-top px-4 pt-4" alt="...">
-              <div class="card-body">
+            <div class="card h-100 rounded-0 card-shadow rounded-3">
+              <img src="assets/img/Paulo.jpg" class="card-img-top px-4 py-4 rounded-pill" alt="...">
+              <div class="card-body pt-0">
                 <h2 class="card-title text-center">Francisco</h2>
                 <p class="card-text text-center">Estudante</p>
                 <div class="d-flex justify-content-center">
