--- a/Projeto PWC/home.html
+++ b/Projeto PWC/home.html
@@ -119,7 +119,7 @@
         <!--1º Card-->
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
-            <div class="card h-100 rounded-0 px-4 pt-4 card-shadow">
+            <div class="card h-100 rounded-0 px-4 pt-4 card-shadow rounded-3">
               <img src="assets/img/Bandeira.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h2 class="card-title text-center">EUA</h2>
@@ -128,7 +128,7 @@
           </div>
         <!--2º Card-->
           <div class="col">
-            <div class="card h-100 rounded-0 px-4 pt-4 card-shadow">
+            <div class="card h-100 rounded-0 px-4 pt-4 card-shadow rounded-3">
               <img src="assets/img/Bandeira1.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h2 class="card-title text-center">Canada</h2> 
@@ -137,7 +137,7 @@
           </div>
         <!--3º Card-->
           <div class="col">
-            <div class="card h-100 rounded-0 px-4 pt-4 card-shadow">
+            <div class="card h-100 rounded-0 px-4 pt-4 card-shadow rounded-3">
               <img src="assets/img/Banderia2.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h2 class="card-title text-center">Reino Unido</h2> 
