Foto Miguel adicionada

--- a/Projeto PWC/home.html
+++ b/Projeto PWC/home.html
@@ -183,7 +183,7 @@
           <div class="col">
             <div class="card h-100 rounded-0 card-shadow rounded-3">
               <div class="h-75">
-                <img src="assets/img/Paulo.jpg" class="h-100 card-img-top px-4 py-4 rounded-pill" alt="...">
+                <img src="assets/img/Miguel.jpg" class="h-100 card-img-top px-4 py-4 rounded-pill" alt="...">
               </div>
               <div class="card-body pt-0">
                 <h2 class="card-title text-center">Miguel</h2>
