--- a/Projeto PWC/home.html
+++ b/Projeto PWC/home.html
@@ -60,7 +60,7 @@
         <div class="carousel-inner">
           <!-- 1º Slide -->
           <div class="carousel-item background-slide1 active">
-            <div class="d-flex slide-carrousel">
+            <div class="d-flex slide-carrousel container">
               <!--Leve duvida-->
               <div class="col-1"></div>
               <div class="d-flex ps-5 col-5 justify-content-center align-items-center">
