Mais ajustes ao carrousel
Existem algumas duvidas que têm que ser esclarecidas em relação ao mesmo!!!

--- a/Projeto PWC/home.html
+++ b/Projeto PWC/home.html
@@ -50,6 +50,7 @@
       </nav>
     </div>
     <!--Carousel-->
+    <!--Duvida carousel porque que não aparece o primeiro em primeiro-->
     <div id="carouselExampleIndicators" class="carousel slide p">
         <!--Trasinhos que aparecem em baixo-->
         <div class="carousel-indicators">
@@ -60,18 +61,18 @@
         <div class="carousel-inner">
           <!-- 1º Slide -->
           <div class="carousel-item background-slide1 active">
-            <div class="d-flex slide-carrousel container">
+            <div class="d-flex slide-carrousel flex-wrap">
               <!--Leve duvida-->
               <div class="col-1"></div>
-              <div class="d-flex ps-5 col-5 justify-content-center align-items-center">
+              <div class="d-flex ps-5 col-5 justify-content-center align-items-center z-1">
                 <div class="ps-5">
                   <h1 class="d-block tamanho-letra-titulo">Descobre o Japão</h1>
-                  <p class="d-block">Faz uma viagem pelos destinos mais deslumbrantes do mundo. Das ruas vibrantes de Nova Iorque às antigas ruínas de Roma, cada imagem revela um lugar à espera de ser explorado.</p>
+                  <p>Faz uma viagem pelos destinos mais deslumbrantes do mundo. Das ruas vibrantes de Nova Iorque às antigas ruínas de Roma, cada imagem revela um lugar à espera de ser explorado.</p>
                   <p class="pb-3">Quer seja para aventura, relaxamento ou descoberta, encontra o teu próximo destino connosco.</p>
                   <a class="nav-link active" href="#" aria-disabled="true"><button type="button" class="btn btn-outline-secondary rounded-0 px-4 py-2">Explorar</button></a>
                 </div>
               </div>
-              <div class="d-flex col-5 justify-content-center align-items-center">
+              <div class="d-flex col-5 justify-content-center align-items-center z-0">
                 <img src="assets/img/PalacioJapao.png">
               </div>
               <!--Leve duvida-->
@@ -80,18 +81,18 @@
           </div>
           <!-- 2º Slide -->
           <div class="carousel-item background-slide2 text-white active">
-            <div class="d-flex slide-carrousel">
+            <div class="d-flex slide-carrousel flex-wrap">
               <!--Leve duvida-->
               <div class="col-1"></div>
-              <div class="d-flex ps-5 col-5 justify-content-center align-items-center">
+              <div class="d-flex ps-5 col-5 justify-content-center align-items-center z-1">
                 <div class="ps-5">
-                  <h1 class="tamanho-letra-titulo">Descobre o Austrália</h1>
+                  <h1 class="d-block tamanho-letra-titulo">Descobre a Austrália</h1>
                   <p>Descobre a vibrante Grande Barreira de Coral, a famosa Ópera de Sydney e o vasto Outback.</p>
                   <p class="pb-3">A Austrália oferece uma vida selvagem única, costas ensolaradas e paisagens diversificadas.</p>
                   <a class="nav-link active" href="#" aria-disabled="true"><button type="button" class="btn btn-outline-light rounded-0 px-4 py-2">Explorar</button></a>
                 </div>
               </div>
-              <div class="d-flex col-5 justify-content-center align-items-center">
+              <div class="d-flex col-5 justify-content-center align-items-center z-0">
                 <img src="assets/img/OperaAustralia.png">
               </div>
               <!--Leve duvida-->
@@ -216,7 +217,7 @@
             <img class="tamanho-logo-footer" src="assets/img/LogotipoPretoPolitécnico.png">
           </div>
           <!--Ancoras para outras paginas-->
-          <div class="d-block my-3">
+          <div class="d-block my-3 container">
               <div class="d-flex align-items-center justify-content-center">
                 <div class="pe-5">
                     <a class="text-decoration-none text-dark active fw-semibold" aria-current="page" href="#">Home</a>
@@ -236,7 +237,7 @@
               </div>
           </div>
           <!--Icones-->
-          <div class="d-block mb-4">
+          <div class="d-block mb-4 container">
             <div class="d-flex align-items-center justify-content-center ">
                 <div class="pe-5">
                   <a href="#" class="redes-sociais">  
@@ -267,7 +268,7 @@
         </div>
         <!--Divizória final-->
         <hr>
-        <div class="d-flex align-items-center justify-content-center ">
+        <div class="d-flex align-items-center justify-content-center container">
           <div class="d-flex align-items-center justify-content-center text-center">
             <p class="fw-semibold">© 2024 Direitos de Autor, Todos os direitos reservados</p>
           </div>
