--- a/Projeto PWC/home.html
+++ b/Projeto PWC/home.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    
     <title>Home</title>
 </head>
 <body>
@@ -30,19 +29,19 @@
             <div class="collapse navbar-collapse ms-auto" id="navbarNav">
               <ul class="navbar-nav align-items-center ms-auto">
                 <li class="nav-item pe-3">
-                  <a class="nav-link active home-azul" aria-current="page" href="#">Home</a>
+                  <a class="nav-link active home-azul" aria-current="page" href="home.html">Home</a>
                 </li>
                 <li class="nav-item pe-3">
-                  <a class="nav-link active" href="#">Países</a>
+                  <a class="nav-link active" href="paises.html">Países</a>
                 </li>
                 <li class="nav-item pe-3">
-                  <a class="nav-link active" href="#">Loja</a>
+                  <a class="nav-link active" href="favoritos.html">Favoritos</a>
                 </li>
                 <li class="nav-item pe-3">
-                  <a class="nav-link active" href="#" aria-disabled="true">Sobre</a>
+                  <a class="nav-link active" href="sobre.html" aria-disabled="true">Sobre</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="#" aria-disabled="true"><button type="button" class="btn btn-outline-primary rounded-0">Contactos</button></a>
+                  <a class="nav-link active" href="contactos.html" aria-disabled="true"><button type="button" class="btn btn-outline-primary rounded-0">Contactos</button></a>
                 </li>
               </ul>
             </div>
@@ -198,7 +197,7 @@
           <!--3º Cards-->
           <div class="col">
             <div class="card h-100 rounded-0 card-shadow rounded-3">
-              <img src="assets/img/Paulo.jpg" class="card-img-top px-4 py-4 rounded-pill" alt="...">
+              <img src="assets/img/CasaNova.jpg" class="card-img-top px-4 py-4 rounded-pill" alt="...">
               <div class="card-body pt-0">
                 <h2 class="card-title text-center">Francisco</h2>
                 <p class="card-text text-center">Estudante</p>
