Inicio da pagina favoritos.
Adicionado header e cards

--- a/Projeto PWC/favoritos.html
+++ b/Projeto PWC/favoritos.html
@@ -47,6 +47,50 @@
             </div>
         </nav>
     </div>
+    <div class="container my-5 py-5">
+      <div class="text-center">
+        <h2 class="tamanho-letra-titulo">Favoritos</h2>
+        <p>Aqui pode encontrar os países que marcou como favoritos enquanto explorava o nosso site.<br>
+          Salve os países que chamaram sua atenção para acessá-los mais facilmente.</p>
+        <div class="container d-flex justify-content-center align-items-center my-5 ">
+          <form class="d-flex barra-de-pesquisa ">
+            <input class="form-control" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
+          </form>
+        </div>
+    </div>
+    <!--1º Card-->
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card h-100 rounded-0 px-4 pt-4 card-shadow rounded-3">
+          <img src="assets/img/Bandeira.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h2 class="card-title text-center">EUA</h2>
+            <button type="button" class="btn">
+              <i class="bi bi-star"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+    <!--2º Card-->
+      <div class="col">
+        <div class="card h-100 rounded-0 px-4 pt-4 card-shadow rounded-3">
+          <img src="assets/img/Bandeira1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h2 class="card-title text-center">Canada</h2> 
+          </div>
+        </div>
+      </div>
+    <!--3º Card-->
+      <div class="col">
+        <div class="card h-100 rounded-0 px-4 pt-4 card-shadow rounded-3">
+          <img src="assets/img/Banderia2.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h2 class="card-title text-center">Reino Unido</h2> 
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
       <!--Footer-->
       <div class="bg-light pt-5">
         <div>
