--- a/Projeto PWC/favoritos.html
+++ b/Projeto PWC/favoritos.html
@@ -63,10 +63,10 @@
       <div class="col">
         <div class="card h-100 rounded-0 px-4 pt-4 card-shadow rounded-3">
           <img src="assets/img/Bandeira.png" class="card-img-top" alt="...">
-          <div class="card-body">
+          <div class="card-body d-flex justify-content-center align-items-center">
             <h2 class="card-title text-center">EUA</h2>
             <button type="button" class="btn">
-              <i class="bi bi-star"></i>
+              <i class="bi bi-star-fill"></i>
             </button>
           </div>
         </div>
@@ -75,8 +75,11 @@
       <div class="col">
         <div class="card h-100 rounded-0 px-4 pt-4 card-shadow rounded-3">
           <img src="assets/img/Bandeira1.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h2 class="card-title text-center">Canada</h2> 
+          <div class="card-body d-flex justify-content-center align-items-center">
+            <h2 class="card-title text-center d-inline">Canada</h2> 
+            <button type="button" class="btn">
+              <i class="bi bi-star-fill"></i>
+            </button>
           </div>
         </div>
       </div>
@@ -84,8 +87,11 @@
       <div class="col">
         <div class="card h-100 rounded-0 px-4 pt-4 card-shadow rounded-3">
           <img src="assets/img/Banderia2.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h2 class="card-title text-center">Reino Unido</h2> 
+          <div class="card-body d-flex justify-content-center align-items-center">
+            <h2 class="card-title text-center">Reino Unido</h2>
+            <button type="button" class="btn">
+              <i class="bi bi-star-fill"></i>
+            </button>
           </div>
         </div>
       </div>
