--- a/Projeto PWC/paises.html
+++ b/Projeto PWC/paises.html
@@ -24,6 +24,7 @@
 </head>
 
 <body>
+  <!--Barra de navegação-->
   <div class="container">
     <nav class="navbar navbar-expand-lg bg-white">
       <div class="container-fluid">
@@ -178,7 +179,9 @@
     </div>
   </div>
 
-  <script src="assets/javascript/javascript.js"></script>
+  <script src="assets/javascript/api.js"></script>
+  <script src="assets/javascript/favoritar.js"></script>
+  <script src="assets/javascript/pesquisa.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
     crossorigin="anonymous"></script>
