Alterações feitas nos favoritos
Mudanças para que seja possivel adicionar os favoritos à webstorage e mudar os icons. Algumas alterações à home foram feitas.

--- a/Projeto PWC/home.html
+++ b/Projeto PWC/home.html
@@ -143,9 +143,6 @@
           </a>
           <div class="card-body d-flex justify-content-center align-items-center">
             <h2 class="card-title text-center d-inline">Canada</h2>
-            <button type="button" class="btn border-0 starButton">
-              <i class="bi bi-star icon"></i>
-            </button>
           </div>
         </div>
       </div>
@@ -156,10 +153,7 @@
             <img src="assets/img/Bandeira1.png" class="card-img-top" alt="...">
           </a>
           <div class="card-body d-flex justify-content-center align-items-center">
-            <h2 class="card-title text-center d-inline">Canada</h2>
-            <button type="button" class="btn border-0 starButton">
-              <i class="bi bi-star icon"></i>
-            </button>
+            <h2 class="card-title text-center d-inline">EUA</h2>
           </div>
         </div>
       </div>
@@ -170,10 +164,7 @@
             <img src="assets/img/Banderia2.png" class="card-img-top" alt="...">
           </a>
           <div class="card-body d-flex justify-content-center align-items-center">
-            <h2 class="card-title text-center d-inline">Canada</h2>
-            <button type="button" class="btn border-0 starButton">
-              <i class="bi bi-star icon"></i>
-            </button>
+            <h2 class="card-title text-center d-inline">Reino Unido</h2>
           </div>
         </div>
       </div>
