--- a/Projeto PWC/home.html
+++ b/Projeto PWC/home.html
@@ -134,40 +134,7 @@
       <p>Escolha um destino para explorar a sua singularidade, cultura e atrações. Descubra os lugares<br>
         mais cativantes do mundo, cada um oferecendo experiências inesquecíveis.</p>
     </div>
-    <!--1º Card-->
     <div class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col">
-        <div class="card h-100 rounded-0 px-4 pt-4 card-shadow rounded-3">
-          <a href="detalhes.html">
-            <img src="assets/img/Bandeira.png" class="card-img-top" alt="...">
-          </a>
-          <div class="card-body d-flex justify-content-center align-items-center">
-            <h2 class="card-title text-center d-inline">Canada</h2>
-          </div>
-        </div>
-      </div>
-      <!--2º Card-->
-      <div class="col">
-        <div class="card h-100 rounded-0 px-4 pt-4 card-shadow rounded-3">
-          <a href="detalhes.html">
-            <img src="assets/img/Bandeira1.png" class="card-img-top" alt="...">
-          </a>
-          <div class="card-body d-flex justify-content-center align-items-center">
-            <h2 class="card-title text-center d-inline">EUA</h2>
-          </div>
-        </div>
-      </div>
-      <!--3º Card-->
-      <div class="col">
-        <div class="card h-100 rounded-0 px-4 pt-4 card-shadow rounded-3">
-          <a href="detalhes.html">
-            <img src="assets/img/Banderia2.png" class="card-img-top" alt="...">
-          </a>
-          <div class="card-body d-flex justify-content-center align-items-center">
-            <h2 class="card-title text-center d-inline">Reino Unido</h2>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
   <!--Background image-->
@@ -301,7 +268,8 @@
       </div>
     </div>
   </div>
-
+  
+  <script src="assets/javascript/api_home.js"></script>
   <script src="assets/javascript/favoritar.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
