Pequenos ajustes no padding dos cards
Tá bom Casa Nova Bom Trabalho :D

--- a/Projeto PWC/contactos.html
+++ b/Projeto PWC/contactos.html
@@ -72,7 +72,7 @@
             <h2 class="card-title text-center">Paulo</h2>
             <p class="card-text text-center">Estudante</p>
             <p class="card-text text-center">Email: 2241562@my.ipleiria.pt</p>
-            <div class="d-flex justify-content-center align-items-center">
+            <div class="d-flex justify-content-center align-items-center pb-2">
               <a href="https://pt.linkedin.com" target="_blank" class="me-3">
                 <img src="assets/img/LinkedinAzul.png" alt="Linkedin">
               </a>
@@ -95,14 +95,12 @@
       <!--2º Cards-->
       <div class="col">
         <div class="card h-100 rounded-0 card-shadow rounded-3">
-
           <img src="assets/img/Miguel.jpg" class=" card-img-top px-4 py-4 rounded-pill" alt="...">
-
           <div class="card-body pt-0">
             <h2 class="card-title text-center">Miguel</h2>
             <p class="card-text text-center">Estudante</p>
             <p class="card-text text-center">Email: 2241612@my.ipleiria.pt</p>
-            <div class="d-flex justify-content-center align-items-center">
+            <div class="d-flex justify-content-center align-items-center pb-2">
               <a href="https://pt.linkedin.com" target="_blank" class="me-3">
                 <img src="assets/img/LinkedinAzul.png" alt="Linkedin">
               </a>
@@ -130,7 +128,7 @@
             <h2 class="card-title text-center">Francisco</h2>
             <p class="card-text text-center">Estudante</p>
             <p class="card-text text-center">Email: 2241555@my.ipleiria.pt</p>
-            <div class="d-flex justify-content-center align-items-center">
+            <div class="d-flex justify-content-center align-items-center pb-2">
               <a href="https://linkedin.com" target="_blank" class="me-3">
                 <img src="assets/img/LinkedinAzul.png" alt="Linkedin">
               </a>
