--- a/Projeto PWC/home.html
+++ b/Projeto PWC/home.html
@@ -33,7 +33,7 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-        </button>
+        </button> 
         <div class="collapse navbar-collapse ms-auto" id="navbarNav">
           <ul class="navbar-nav align-items-center ms-auto">
             <li class="nav-item pe-3">
@@ -44,9 +44,6 @@
             </li>
             <li class="nav-item pe-3">
               <a class="nav-link active" href="favoritos.html">Favoritos</a>
-            </li>
-            <li class="nav-item pe-3">
-              <a class="nav-link active" href="sobre.html" aria-disabled="true">Sobre</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="contactos.html" aria-disabled="true"><button type="button"
@@ -59,7 +56,7 @@
   </div>
   <!--Carousel-->
   <!--Duvida carousel porque que não aparece o primeiro em primeiro-->
-  <div id="carouselExampleIndicators" class="carousel slide p">
+  <div id="carouselExampleIndicators" class="carousel slide">
     <!--Trasinhos que aparecem em baixo-->
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
