favoritos.js adicionado para fazer a página favoritos funcinonar
pequenas alterações foram feitas na pagina contactos e favoritos

--- a/Projeto PWC/contactos.html
+++ b/Projeto PWC/contactos.html
@@ -21,7 +21,7 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
 
-  <title>Home</title>
+  <title>Contactos</title>
 </head>
 
 <body>
@@ -45,9 +45,6 @@
             </li>
             <li class="nav-item pe-3">
               <a class="nav-link active" href="favoritos.html">Favoritos</a>
-            </li>
-            <li class="nav-item pe-3">
-              <a class="nav-link active" href="sobre.html" aria-disabled="true">Sobre</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="contactos.html" aria-disabled="true"><button type="button"
@@ -151,7 +148,7 @@
     </div>
   </div>
   <!--Formulário-->
-  <div class="d-flex justify-content-center align-items-center" style="margin-bottom: 50px;">
+  <div class="d-flex justify-content-center align-items-center mb-5">
     <!-- Ajuste o valor de margem -->
     <div class="col-md-8"> <!-- Ajuste a largura aqui -->
       <div class="card h-100 rounded-0 card-shadow rounded-3">
