--- a/Projeto PWC/favoritos.html
+++ b/Projeto PWC/favoritos.html
@@ -66,7 +66,7 @@
         </form>
       </div>
     </div>
-    <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="row row-cols-1 row-cols-md-3 g-4" id="favorites-container">
     </div>
   </div>
   <!--Footer-->
@@ -134,7 +134,7 @@
     </div>
   </div>
 
-  <script src="assets/javascript/api.js"></script>
+  <script src="assets/javascript/favoritos.js"></script>
   <script src="assets/javascript/favoritar.js"></script>
   <script src="assets/javascript/pesquisa.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
